cluster/apps/default/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app: jackett
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: lscr.io/linuxserver/jackett:0.20.1088 # {"$imagepolicy": "flux-system:jackett"}
        ports:
        - containerPort: 9117
        readinessProbe:
          tcpSocket:
            port: 9117
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 9117
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - mountPath: /config
          name: config-volume
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: jackett-config
